# brion_pipelines

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md
.github/workflows/: cmake-multi-platform.yml
cmake_common/: tools.cmake
components/: CMakeLists.txt
components/app/: CMakeLists.txt
components/app/docs/: app.md
components/app/private/: app.cc
components/log_message/: CMakeLists.txt
components/log_message/public/log_message/: message.h
components/log_message_organizer/: CMakeLists.txt
components/log_message_organizer/docs/: organizing.md
components/log_message_organizer/private/: organize_by_id.cc  split_by_pipeline.cc
components/log_message_organizer/public/log_message_organizer/: organize_by_id.h  pipeline_log_message.h  split_by_pipeline.h
components/log_message_organizer/test/: CMakeLists.txt  test_organize_by_id.cc  test_split_by_pipeline.cc
components/log_message_parser/: CMakeLists.txt
components/log_message_parser/docs/: parsing.md
components/log_message_parser/private/: ascii_body_parser.cc  hex16_body_parser.cc  semantics.cc  structure.cc
components/log_message_parser/public/log_message_parser/: ascii_body_parser.h  hex16_body_parser.h  semantics.h  structure.h
components/log_message_parser/test/: CMakeLists.txt  test_ascii_body_parser.cc  test_hex16_body_parser.cc  test_semantics.cc  test_structure.cc
docs/: overview.md
docs/html/: Organizing.html  Parsing.html  Readme.html  annotated.html  annotated_dup.js  app.html  app_8cc.html  app_8cc.js  app_8cc__incl.map  app_8cc__incl.md5  ascii__body__parser_8cc.html  ascii__body__parser_8cc__incl.map  ascii__body__parser_8cc__incl.md5  ascii__body__parser_8h.html  ascii__body__parser_8h.js  ascii__body__parser_8h__dep__incl.map  ascii__body__parser_8h__dep__incl.md5  ascii__body__parser_8h__incl.map  ascii__body__parser_8h__incl.md5  ascii__body__parser_8h_source.html  classAsciiBodyParserTest-members.html  classAsciiBodyParserTest.html  classAsciiBodyParserTest__coll__graph.map  classAsciiBodyParserTest__coll__graph.md5  classAsciiBodyParserTest__inherit__graph.map  classAsciiBodyParserTest__inherit__graph.md5  classHex16BodyParserTest-members.html  classHex16BodyParserTest.html  classHex16BodyParserTest__coll__graph.map  classHex16BodyParserTest__coll__graph.md5  classHex16BodyParserTest__inherit__graph.map  classHex16BodyParserTest__inherit__graph.md5  classLogMessageParserTest.html  classLogMessageParserTest__coll__graph.map  classLogMessageParserTest__inherit__graph.md5  classOrganizeByIdTest.html  classOrganizeByIdTest__inherit__graph.map  classOrganizeByIdTest__inherit__graph.md5  classSemanticsParserTest.html  classSemanticsParserTest__inherit__graph.map  (+587 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+51 more)
docs/latex/: Organizing.tex  Parsing.tex  Readme.tex  annotated.tex  app.tex  app_8cc.tex  app_8cc__incl.md5  ascii__body__parser_8cc.tex  ascii__body__parser_8cc__incl.md5  ascii__body__parser_8h.tex  ascii__body__parser_8h__dep__incl.md5  ascii__body__parser_8h__incl.md5  ascii__body__parser_8h_source.tex  classAsciiBodyParserTest.tex  classAsciiBodyParserTest__coll__graph.md5  classAsciiBodyParserTest__inherit__graph.md5  classHex16BodyParserTest.tex  classHex16BodyParserTest__coll__graph.md5  classHex16BodyParserTest__inherit__graph.md5  classLogMessageParserTest.tex  classLogMessageParserTest__coll__graph.md5  classOrganizeByIdTest.tex  classOrganizeByIdTest__inherit__graph.md5  classSemanticsParserTest.tex  classSemanticsParserTest__coll__graph.md5  classSplitByPipelineTest.tex  classSplitByPipelineTest__inherit__graph.md5  classclipp_1_1detail_1_1match__t.tex  classclipp_1_1detail_1_1scoped__dfs__traverser.tex  classclipp_1_1doc__formatting.tex  classclipp_1_1documentation.tex  classclipp_1_1group.tex  classclipp_1_1group_1_1depth__first__traverser.tex  classclipp_1_1group_1_1depth__first__traverser_1_1memento.tex  classclipp_1_1group__inherit__graph.md5  classclipp_1_1man__page.tex  classclipp_1_1man__page_1_1section.tex  classclipp_1_1param__filter.tex  classclipp_1_1parameter.tex  classclipp_1_1parameter__inherit__graph.md5  (+119 more)
docs_overview/: overview.md
examples/: test_file1.txt  test_file2-1.txt  test_file2.txt  test_file3-1.txt  test_file3.txt  test_file4-1.txt  test_file4.txt
